--- a/README
+++ b/README
@@ -1,1 +1,6 @@
 這是由python寫出的小工具 裡面只用了tk創建視窗和csv寫入檔案 請放心使用
+
+介紹：這是一個方便台灣楓之谷玩家紀錄洗方塊顆數
+打開tool.exe會彈出一個終端機在彈出一個視窗   ＃請注意關閉終端機視窗也會關閉
+首先它會自動建立一個現在時間的csv檔          ＃請勿在程式運行中打開csv以防出錯
+會有伺服器，方塊類別，顆數幾顆到幾顆 按下enter會幫你記錄並顯示在視窗上最下方有時間可以確認是否有更新
