--- a/README
+++ b/README
@@ -3,4 +3,9 @@
 介紹：這是一個方便台灣楓之谷玩家紀錄洗方塊顆數
 打開tool.exe會彈出一個終端機在彈出一個視窗   ＃請注意關閉終端機視窗也會關閉
 首先它會自動建立一個現在時間的csv檔          ＃請勿在程式運行中打開csv以防出錯
-會有伺服器，方塊類別，顆數幾顆到幾顆 按下enter會幫你記錄並顯示在視窗上最下方有時間可以確認是否有更新
+會有伺服器，方塊類別，顆數幾顆到幾顆 供你輸入選擇  
+按下enter會幫你記錄並顯示在視窗上最下方有時間可以確認是否有更新
+並處存到csv檔 如需查看可以開excel開啟此csv檔查看
+
+
+如果有需更改價格可以提出意見 我會再更新版本
