--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-這是由python寫出的小工具 裡面只用了tk創建視窗和csv寫入檔案 請放心使用
+這是由python 3.11.4 寫出的小工具 裡面只用了tk創建視窗和csv寫入檔案 請放心使用
 
 介紹：這是一個方便台灣楓之谷玩家紀錄洗方塊顆數
 打開tool.exe會彈出一個終端機在彈出一個視窗   ＃請注意關閉終端機視窗也會關閉
