--- a/README
+++ b/README
@@ -7,5 +7,10 @@
 按下enter會幫你記錄並顯示在視窗上最下方有時間可以確認是否有更新
 並處存到csv檔 如需查看可以開excel開啟此csv檔查看
 
+如果要使用exe檔 執行時csv檔案會跑去別的地方 請找找看使用者目錄或根目錄
+
+
 
 如果有需更改價格可以提出意見 我會再更新版本
+
+
