--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-這是由python 3.11.4 寫出的小工具 裡面只用了tk創建視窗和csv寫入檔案 請放心使用
+這是由python 3.11.4 寫出的小工具 裡面只用了tkinter創建視窗和csv寫入檔案 請放心使用
 
 介紹：這是一個方便台灣楓之谷玩家紀錄洗方塊顆數
 打開tool.py會彈出一個終端機再彈出一個視窗   ＃請注意關閉終端機視窗也會關閉
@@ -7,9 +7,11 @@
 按下enter會幫你記錄並顯示在視窗上最下方有時間可以確認是否有更新
 並處存到csv檔 如需查看可以開excel開啟此csv檔查看
 
-如果要使用exe檔 執行時csv檔案會跑去別的地方 請找找看使用者目錄或根目錄
+如果要使用macOS的執行檔 執行時csv檔案會跑去別的地方 請找找看使用者目錄或根目錄
 
+如果要使用windows的exe執行檔 會跑出安全性檢查 等他跑完就會出現了 #如果不放心請不使用或刪除
 
+另字形背景均沒有設定 如果覺得不適請告知 我會想辦法
 
 如果有需更改可以提出意見 我會更新
 
