--- a/README
+++ b/README
@@ -11,7 +11,7 @@
 
 如果要使用windows的exe執行檔 會跑出安全性檢查 等他跑完就會出現了 #如果不放心請不使用或刪除
 
-另字形背景均沒有設定 如果覺得不適請告知 我會想辦法
+另字形背景均很醜設定 如果覺得不適請告知 我會想辦法
 
 如果有需更改可以提出意見 我會更新
 
