--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 這是由python 3.11.4 寫出的小工具 裡面只用了tkinter創建視窗和csv寫入檔案 請放心使用
-
+exe檔是由pyintaller打包tool.py檔案而成請放心使用
 介紹：這是一個方便台灣楓之谷玩家紀錄洗方塊顆數
 打開tool.py會彈出一個終端機再彈出一個視窗   ＃請注意關閉終端機視窗也會關閉
 首先它會自動建立一個現在時間的csv檔          ＃請勿在程式運行中打開csv以防出錯
