--- a/README
+++ b/README
@@ -1,19 +1,47 @@
-這是由python 3.11.4 寫出的小工具 裡面只用了tkinter創建視窗和csv寫入檔案 請放心使用
-exe檔是由pyintaller打包tool.py檔案而成請放心使用
-介紹：這是一個方便台灣楓之谷玩家紀錄洗方塊顆數
-打開tool.py會彈出一個終端機再彈出一個視窗   ＃請注意關閉終端機視窗也會關閉
-首先它會自動建立一個現在時間的csv檔          ＃請勿在程式運行中打開csv以防出錯
-會有伺服器，方塊類別，顆數幾顆到幾顆 供你輸入選擇  
-按下enter會幫你記錄並顯示在視窗上最下方有時間可以確認是否有更新
-並處存到csv檔 如需查看可以開excel開啟此csv檔查看
+# 記錄工具
 
-如果要使用macOS的執行檔 執行時csv檔案會跑去別的地方 請找找看使用者目錄或根目錄
+![專案封面圖](https://github.com/miller2415/ToolOfDoc/blob/main/%E6%88%AA%E5%9C%96%202023-12-07%20%E4%B8%8B%E5%8D%884.22.50.png)
 
-如果要使用windows的exe執行檔 會跑出安全性檢查 等他跑完就會出現了 #如果不放心請不使用或刪除
+> 此專案是為了洗方塊的玩玩家方便記錄與用更便捷的方式來進行
 
-另字形背景均很醜設定 如果覺得不適請告知 我會想辦法
+記錄檔案範例為上方的csv檔
 
-如果有需更改可以提出意見 我會更新
+...
+
+## 功能
+
+開始執行時會自動生成一個csv檔 #windows 執行exe檔 csv檔案會出現在當前目錄 #MacOS 執行檔 csv檔案會出現在使用者目錄(很神奇)
+
+選擇伺服器與方塊類型
+
+方塊的起始顆數與最終顆數
+
+按下確認後畫面上會顯示顆數乘以預設價格的最終價格 並顯示時間
+
+按下確認後會自動幫你在csv檔案紀錄(有時間標記) #執行中可開啟檔案確認 應該不會出錯
+
+#執行中請勿關閉終端機 這樣視窗也會跟著關掉
+
+...
 
 
-預計更新：自定義顏色風格，自定義數值
+## 安裝
+
+> 請務必依據你的專案來調整內容。
+
+以下將會引導你如何安裝此專案到你的電腦上。
+
+windows版本請下載`tool.exe`即可執行
+
+MacOS版本請下載`tool`即可執行
+
+如果不放心可以下載`tool.py`檔案自行觀看內容並執行
+
+`tool.py`使用的python版本應該3.6以上就可以執行了個人使用3.9以上正常執行且不需額外pip install是簡單的小工句
+
+...
+
+## 預計更新
+
+(可能)會新增價格設定與顏色風格設定
+
